--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,4 +5,6 @@ environment:
   sdk: '>=2.17.0 <3.0.0'
 
 dev_dependencies:
-  carapacik_lints: ^1.1.0
+  carapacik_lints:
+    git:
+      url: https://github.com/Carapacik/carapacik_lints.git
