--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: carapacik_lints
 description: Super lint rules for Flutter project
-version: 1.1.0
+version: 1.1.1
 homepage: 'https://github.com/Carapacik/carapacik_lints'
 environment:
   sdk: '>=2.17.0 <3.0.0'
+  flutter: '>=3.0.0'
