--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,10 +1,8 @@
 name: example
-description: A project that showcases how to enable the recommended lints for Flutter apps, packages, and plugins.
+description: A project that showcases how to enable lints for Flutter apps.
 publish_to: none
 environment:
   sdk: '>=2.17.0 <3.0.0'
 
 dev_dependencies:
-  carapacik_lints:
-    git:
-      url: https://github.com/Carapacik/carapacik_lints.git
+  carapacik_lints: ^1.1.3
