--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: carapacik_lints
 description: The most necessary lints for Flutter to encourage good coding practices.
-version: 1.1.3
-homepage: 'https://github.com/Carapacik/carapacik_lints'
+version: 1.1.4
+repository: 'https://github.com/Carapacik/carapacik_lints'
 environment:
   sdk: '>=2.17.0 <3.0.0'
