--- a/lib/core.yaml
+++ b/lib/core.yaml
@@ -68,7 +68,6 @@ linter:
     - avoid_bool_literals_in_conditional_expressions
     - avoid_catches_without_on_clauses
     - avoid_catching_errors
-    - avoid_classes_with_only_static_members
     - avoid_double_and_int_checks
     - avoid_escaping_inner_quotes
     - avoid_field_initializers_in_const_classes
@@ -145,6 +144,7 @@ linter:
     - prefer_equal_for_default_values
     - prefer_final_fields
     - prefer_final_in_for_each
+    - prefer_final_locals
     - prefer_for_elements_to_map_fromIterable
     - prefer_function_declarations_over_variables
     - prefer_generic_function_type_aliases
