--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -2,7 +2,7 @@ name: example
 description: A project that showcases how to enable lints for Flutter apps.
 publish_to: none
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ^3.0.0
 
 dev_dependencies:
-  carapacik_lints: ^1.4.0
+  carapacik_lints: ^1.4.1
