--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,9 @@
 name: carapacik_lints
 description: The most necessary lints for Flutter to encourage good coding practices
-version: 1.4.0
+version: 1.4.1
 repository: https://github.com/Carapacik/carapacik_lints
+topics:
+  - analysis
+  - lints
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ^3.0.0
