--- a/lib/core.yaml
+++ b/lib/core.yaml
@@ -39,8 +39,6 @@ linter:
     - hash_and_equals
     - implicit_reopen
     - invalid_case_patterns
-    - iterable_contains_unrelated_type
-    - list_remove_unrelated_type
     - literal_only_boolean_expressions
     - no_adjacent_strings_in_list
     - no_duplicate_case_values
@@ -62,6 +60,7 @@ linter:
     - always_put_control_body_on_new_line
     - always_put_required_named_parameters_first
     - annotate_overrides
+    - annotate_redeclares
     - avoid_annotating_with_dynamic
     - avoid_bool_literals_in_conditional_expressions
     - avoid_catches_without_on_clauses
