--- a/lib/core.yaml
+++ b/lib/core.yaml
@@ -40,6 +40,7 @@ linter:
     - implicit_reopen
     - invalid_case_patterns
     - literal_only_boolean_expressions
+    - missing_code_block_language_in_doc_comment
     - no_adjacent_strings_in_list
     - no_duplicate_case_values
     - no_logic_in_create_state
@@ -48,6 +49,7 @@ linter:
     - prefer_void_to_null
     - test_types_in_equals
     - throw_in_finally
+    - unintended_html_in_doc_comment
     - unnecessary_statements
     - unrelated_type_equality_checks
     - unsafe_html
@@ -187,6 +189,7 @@ linter:
     - unnecessary_lambdas
     - unnecessary_late
     - unnecessary_library_directive
+    - unnecessary_library_name
     - unnecessary_new
     - unnecessary_null_aware_assignments
     - unnecessary_null_aware_operator_on_extension_on_nullable
