--- a/lib/core.yaml
+++ b/lib/core.yaml
@@ -168,6 +168,7 @@ linter:
     - sort_pub_dependencies
     - sort_unnamed_constructors_first
     - strict_top_level_inference
+    - switch_on_type
     - test_types_in_equals
     - throw_in_finally
     - tighten_type_of_initializing_formals
@@ -201,6 +202,7 @@ linter:
     - unnecessary_string_interpolations
     - unnecessary_this
     - unnecessary_to_list_in_spreads
+    - unnecessary_unawaited
     - unnecessary_underscores
     - unreachable_from_main
     - unrelated_type_equality_checks
